--- a/app/src/main/res/layout/fragment_current_language.xml
+++ b/app/src/main/res/layout/fragment_current_language.xml
@@ -28,7 +28,8 @@
 
             <TextView
                 style="@style/LanguageTextStyle"
-                android:text="@{mainLanguage.name}" />
+                android:text="@{mainLanguage.name}"
+                android:paddingStart="10dp"/>
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -48,7 +49,7 @@
             android:layout_height="@dimen/current_fragment_height"
             android:layout_marginStart="12dp"
             android:layout_marginEnd="12dp"
-            android:padding="6dp"
+            android:padding="9dp"
             android:adjustViewBounds="true"
             android:src="@drawable/ic_swap"/>
 
@@ -71,7 +72,8 @@
 
             <TextView
                 style="@style/LanguageTextStyle"
-                android:text="@{translationLanguage.name}" />
+                android:text="@{translationLanguage.name}"
+                android:paddingEnd="10dp"/>
 
         </LinearLayout>
 
