--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,10 +6,9 @@
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">match_parent</item>
         <item name="android:gravity">center</item>
-        <item name="android:padding">5dp</item>
-        <item name="android:textSize">15sp</item>
+        <item name="android:textSize">14.5sp</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:textColor">?attr/colorPrimaryVariant</item>
+        <item name="android:textColor">?attr/colorPrimaryDark</item>
         <item name="maxLines">1</item>
     </style>
 
