--- a/app/src/main/res/layout/fragment_translation.xml
+++ b/app/src/main/res/layout/fragment_translation.xml
@@ -4,53 +4,28 @@
     <data>
         <import type="android.view.View"/>
         <variable
-            name="translationItem"
-            type="com.whycody.wordslife.data.TranslationItem" />
+            name="translationViewModel"
+            type="com.whycody.wordslife.search.translation.TranslationViewModel" />
     </data>
 
     <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:animateLayoutChanges="false"
         android:paddingHorizontal="@dimen/app_padding"
-        android:paddingBottom="20dp"
-        tools:context=".search.lyric.translation.TranslationFragment"
-        android:visibility="@{translationItem.translatedSentence == null ? View.GONE : View.VISIBLE}"
+        tools:context=".search.translation.TranslationFragment"
         android:orientation="vertical">
 
-        <FrameLayout
-            android:id="@+id/headerContainer"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-
-        <LinearLayout
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/translationRecycler"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/s_lyric_background"
-            android:paddingHorizontal="@dimen/app_padding"
-            android:paddingVertical="10dp"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:layout_width="30dp"
-                android:layout_height="wrap_content"
-                android:adjustViewBounds="true"
-                android:layout_gravity="center"
-                android:src="@{translationItem.drawable}"/>
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@{translationItem.translatedSentence}"
-                android:textSize="15sp"
-                android:textColor="?attr/colorPrimaryDark"
-                android:layout_gravity="center"
-                android:gravity="center|start"
-                android:paddingStart="12dp"/>
-
-        </LinearLayout>
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            android:paddingVertical="7dp"
+            android:visibility="@{translationViewModel.translations.empty ? View.GONE : View.VISIBLE}"/>
 
     </LinearLayout>
 
