--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -24,66 +24,11 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <androidx.constraintlayout.widget.ConstraintLayout
+            <fragment
+                android:id="@+id/mainBannerFragment"
+                android:name="com.whycody.wordslife.home.banner.MainBannerFragment"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="225dp"
-                    android:scaleType="centerCrop"
-                    android:adjustViewBounds="true"
-                    android:src="@drawable/banner_no_stars"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <ImageView
-                    android:id="@+id/bannerStarsOne"
-                    android:layout_width="match_parent"
-                    android:layout_height="225dp"
-                    android:scaleType="centerCrop"
-                    android:adjustViewBounds="true"
-                    android:src="@drawable/ic_stars_one"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <ImageView
-                    android:id="@+id/bannerStarsTwo"
-                    android:layout_width="match_parent"
-                    android:layout_height="225dp"
-                    android:scaleType="centerCrop"
-                    android:adjustViewBounds="true"
-                    android:src="@drawable/ic_stars_two"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <ImageView
-                    android:id="@+id/bannerStarsThree"
-                    android:layout_width="match_parent"
-                    android:layout_height="225dp"
-                    android:scaleType="centerCrop"
-                    android:adjustViewBounds="true"
-                    android:src="@drawable/ic_stars_three"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <ImageView
-                    android:id="@+id/bannerStarsFour"
-                    android:layout_width="match_parent"
-                    android:layout_height="225dp"
-                    android:scaleType="centerCrop"
-                    android:adjustViewBounds="true"
-                    android:src="@drawable/ic_stars_four"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="25dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    android:background="@drawable/s_search_rectangle"/>
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
+                android:layout_height="match_parent"/>
 
             <fragment
                 android:id="@+id/currentLanguageFragment"
@@ -111,8 +56,8 @@
 
                 <View
                     android:id="@+id/dot"
-                    android:layout_width="10dp"
-                    android:layout_height="10dp"
+                    android:layout_width="9dp"
+                    android:layout_height="9dp"
                     android:background="@drawable/circle"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintTop_toTopOf="@+id/headerText"
@@ -124,6 +69,7 @@
                     android:layout_height="wrap_content"
                     app:layout_constraintLeft_toRightOf="@id/dot"
                     app:layout_constraintTop_toTopOf="parent"
+                    android:textSize="15sp"
                     android:textColor="@color/header_gray"
                     android:padding="10dp"
                     android:textStyle="bold"
