--- a/app/src/main/res/anim/enter_anim.xml
+++ b/app/src/main/res/anim/enter_anim.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android"
-    android:ordering="together">
+    android:ordering="together"
+    android:duration="130">
+
     <scale
         android:fromYScale="0.9"
         android:fromXScale="0.9"
         android:toYScale="1"
         android:toXScale="1"
         android:pivotX="50%"
-        android:pivotY="50%"
-        android:duration="80"/>
+        android:pivotY="50%"/>
+
     <alpha
         android:fromAlpha="0"
-        android:toAlpha="1"
-        android:duration="80"/>
+        android:toAlpha="1"/>
+
 </set>
