--- a/app/src/main/res/layout/fragment_choose_language.xml
+++ b/app/src/main/res/layout/fragment_choose_language.xml
@@ -20,19 +20,18 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:paddingStart="@dimen/app_padding"
             android:paddingEnd="@dimen/app_padding"
             android:paddingTop="40dp"
             android:paddingBottom="21dp">
 
             <View
                 android:id="@+id/dot"
-                android:layout_width="10dp"
-                android:layout_height="10dp"
-                android:background="@drawable/circle"
+                android:layout_width="6dp"
+                android:layout_height="0dp"
+                android:background="?attr/colorPrimary"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/invisibleTextView"
-                app:layout_constraintBottom_toBottomOf="@id/invisibleTextView" />
+                app:layout_constraintTop_toTopOf="@+id/headerText"
+                app:layout_constraintBottom_toBottomOf="@id/headerText" />
 
             <TextView
                 android:id="@+id/headerText"
@@ -41,22 +40,12 @@
                 android:text="@{ mainLanguage ? @string/choose_main_language : @string/choose_translation_language}"
                 android:textStyle="bold"
                 android:textSize="22sp"
-                android:paddingLeft="16dp"
+                android:paddingStart="@dimen/app_padding"
                 android:textColor="?attr/colorPrimaryDark"
                 app:layout_constraintLeft_toRightOf="@id/dot"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintRight_toRightOf="parent"/>
-
-            <TextView
-                android:id="@+id/invisibleTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:visibility="invisible"
-                android:textStyle="bold"
-                android:textSize="22sp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
