Added animation to Lyricated logo in HomeFragment

--- a/app/src/main/res/layout/fragment_lyricated_banner.xml
+++ b/app/src/main/res/layout/fragment_lyricated_banner.xml
@@ -30,6 +30,7 @@
                 app:layout_constraintEnd_toEndOf="parent" />
 
             <ImageView
+                android:id="@+id/lyricatedIllustration"
                 android:layout_width="wrap_content"
                 android:layout_height="77dp"
                 android:adjustViewBounds="true"
