Fixed bugs with illegal chars in search query

--- a/app/src/main/res/layout/fragment_search_field.xml
+++ b/app/src/main/res/layout/fragment_search_field.xml
@@ -33,6 +33,7 @@
             android:background="@android:color/transparent"
             android:paddingHorizontal="6dp"
             android:paddingVertical="15dp"
+            android:maxLength="200"
             android:inputType="text"
             android:textSize="16sp"
             android:maxLines="1"
