--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -22,7 +22,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingBottom="60dp">
 
             <fragment
                 android:id="@+id/lyricatedBannerFragment"
@@ -51,14 +52,12 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="25dp"
                 android:layout_marginStart="@dimen/app_padding"
-                android:layout_marginEnd="@dimen/app_padding"
-                android:paddingBottom="60dp">
+                android:layout_marginEnd="@dimen/app_padding">
 
                 <View
                     android:id="@+id/dot"
                     android:layout_width="9dp"
                     android:layout_height="9dp"
-                    android:layout_marginTop="5dp"
                     android:background="@drawable/circle"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintTop_toTopOf="@+id/headerText"
@@ -73,20 +72,20 @@
                     android:textSize="15sp"
                     android:textColor="?attr/colorPrimaryVariant"
                     android:paddingHorizontal="10dp"
-                    android:paddingTop="10dp"
-                    android:paddingBottom="5dp"
+                    android:layout_marginTop="10dp"
                     android:textStyle="bold"
                     android:text="@string/previous_words"/>
 
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
                 <LinearLayout
-                    android:layout_width="0dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="15dp"
+                    android:layout_marginTop="13dp"
+                    android:layout_marginStart="@dimen/app_padding"
+                    android:layout_marginEnd="@dimen/app_padding"
                     android:background="@drawable/s_search_button"
-                    android:orientation="vertical"
-                    app:layout_constraintTop_toBottomOf="@+id/headerText"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent">
+                    android:orientation="vertical">
 
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/historyRecycler"
@@ -107,8 +106,6 @@
                         android:padding="40dp"/>
 
                 </LinearLayout>
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
 
         </LinearLayout>
 
