--- a/app/src/main/res/layout/fragment_filter.xml
+++ b/app/src/main/res/layout/fragment_filter.xml
@@ -1,53 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
-    android:fillViewport="true"
-    android:overScrollMode="never">
+<layout>
 
-    <LinearLayout
-        android:id="@+id/fragmentsContainer"
+    <data>
+        <variable
+            name="filtersAreChanged"
+            type="boolean" />
+    </data>
+
+    <androidx.core.widget.NestedScrollView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="30dp"
-        android:paddingBottom="30dp"
-        android:orientation="vertical">
+        app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
+        android:fillViewport="true"
+        android:overScrollMode="never">
 
         <LinearLayout
-            android:id="@+id/filterHeader"
+            android:id="@+id/fragmentsContainer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:paddingHorizontal="@dimen/app_padding"
-            android:layout_marginBottom="20dp">
+            android:paddingTop="30dp"
+            android:paddingBottom="30dp"
+            android:orientation="vertical">
 
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
+            <LinearLayout
+                android:id="@+id/filterHeader"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:paddingHorizontal="@dimen/app_padding"
+                android:layout_marginBottom="20dp">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:textStyle="bold"
+                    android:gravity="center|start"
+                    android:layout_weight="1"
+                    android:textColor="?attr/colorPrimaryVariant"
+                    android:textSize="17sp"
+                    android:text="@string/filter"/>
+
+                <ImageView
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_gravity="center"
+                    android:src="@drawable/ic_arrow_down"/>
+
+            </LinearLayout>
+
+            <Button
+                android:id="@+id/clearFiltersBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAllCaps="true"
+                android:paddingHorizontal="@dimen/app_padding"
+                android:text="@string/clear"
                 android:textStyle="bold"
-                android:gravity="center|start"
-                android:layout_weight="1"
-                android:textColor="?attr/colorPrimaryVariant"
-                android:textSize="17sp"
-                android:text="@string/filter"/>
+                android:paddingVertical="10dp"
+                android:layout_marginBottom="5dp"
+                android:enabled="@{filtersAreChanged}"
+                android:background="@android:color/transparent"
+                android:textColor="@drawable/s_clear_btn"/>
 
-            <ImageView
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_gravity="center"
-                android:src="@drawable/ic_arrow_down"/>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/filterRecycler"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
 
         </LinearLayout>
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/filterRecycler"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+    </androidx.core.widget.NestedScrollView>
 
-    </LinearLayout>
-
-</androidx.core.widget.NestedScrollView>
+</layout>
