--- a/app/src/main/res/layout/fragment_lyric.xml
+++ b/app/src/main/res/layout/fragment_lyric.xml
@@ -1,47 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
-    android:fillViewport="true"
-    android:overScrollMode="never">
+<layout>
 
-    <LinearLayout
-        android:id="@+id/fragmentsContainer"
+    <data>
+        <variable
+            name="lyricId"
+            type="int" />
+    </data>
+
+    <androidx.core.widget.NestedScrollView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="30dp"
-        android:paddingBottom="30dp"
-        android:orientation="vertical">
+        app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
+        android:fillViewport="true"
+        android:overScrollMode="never">
 
         <LinearLayout
-            android:id="@+id/lyricHeader"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:paddingHorizontal="@dimen/app_padding"
-            android:layout_marginBottom="20dp">
+            android:paddingTop="30dp"
+            android:paddingBottom="30dp"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:id="@+id/lyricHeader"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:paddingHorizontal="@dimen/app_padding"
+                android:layout_marginBottom="20dp">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:textStyle="bold"
+                    android:gravity="center|start"
+                    android:layout_weight="1"
+                    android:textColor="?attr/colorPrimaryVariant"
+                    android:textSize="17sp"
+                    android:text="@string/details"/>
+
+                <ImageView
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_gravity="center"
+                    android:src="@drawable/ic_arrow_down"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/fragmentsContainer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"/>
 
             <TextView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:textStyle="bold"
-                android:gravity="center|start"
-                android:layout_weight="1"
-                android:textColor="?attr/colorPrimaryVariant"
-                android:textSize="17sp"
-                android:text="@string/details"/>
-
-            <ImageView
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_gravity="center"
-                android:src="@drawable/ic_arrow_down"/>
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingHorizontal="@dimen/app_padding"
+                android:paddingTop="10dp"
+                android:layout_gravity="end"
+                android:text="@{`#`+lyricId}"/>
 
         </LinearLayout>
 
-    </LinearLayout>
+    </androidx.core.widget.NestedScrollView>
 
-</androidx.core.widget.NestedScrollView>
+</layout>
