--- a/app/src/main/res/layout/item_history.xml
+++ b/app/src/main/res/layout/item_history.xml
@@ -18,28 +18,20 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@{ position%2==0 ? @android:color/transparent : @color/gray}"
         android:onClick="@{()->interactor.onHistoryItemClick(historyItem)}">
-
-        <View
-            android:id="@+id/underline"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="?attr/colorPrimarySurface"
-            android:visibility="@{position==0 ? View.INVISIBLE : View.VISIBLE}"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:paddingTop="15dp"
-            android:paddingBottom="15dp"
+            android:paddingVertical="16dp"
             android:paddingStart="@dimen/app_padding"
             android:paddingEnd="@dimen/app_padding">
 
             <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="36dp"
-                android:background="@drawable/s_language_rectangle">
+                android:layout_height="36dp">
 
                 <ImageView
                     android:layout_width="30dp"
