--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -47,36 +47,17 @@
                 android:layout_marginStart="@dimen/app_padding"
                 android:layout_marginEnd="@dimen/app_padding"/>
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/headerText"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="25dp"
-                android:layout_marginStart="@dimen/app_padding"
-                android:layout_marginEnd="@dimen/app_padding">
-
-                <View
-                    android:id="@+id/dot"
-                    android:layout_width="9dp"
-                    android:layout_height="9dp"
-                    android:background="@drawable/circle"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/headerText"
-                    app:layout_constraintBottom_toBottomOf="@+id/headerText"/>
-
-                <TextView
-                    android:id="@+id/headerText"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintLeft_toRightOf="@id/dot"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:textSize="15sp"
-                    android:textColor="?attr/colorPrimaryVariant"
-                    android:paddingHorizontal="10dp"
-                    android:layout_marginTop="10dp"
-                    android:textStyle="bold"
-                    android:text="@string/previous_words"/>
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
+                app:layout_constraintTop_toTopOf="parent"
+                android:textSize="15sp"
+                android:textColor="?attr/colorPrimaryVariant"
+                android:paddingHorizontal="@dimen/app_padding"
+                android:layout_marginTop="30dp"
+                android:textStyle="bold"
+                android:text="@string/previous_words"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
