--- a/app/src/main/res/layout/fragment_library.xml
+++ b/app/src/main/res/layout/fragment_library.xml
@@ -3,11 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".library.LibraryFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".library.LibraryFragment"
+    android:paddingBottom="50dp">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/libraryRecycler"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:overScrollMode="never"
+        android:layoutAnimation="@anim/layout_fall_down"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
 
 </FrameLayout>
