--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -26,8 +26,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@{onlySaved ? @string/saved : @string/history}"
-                android:background="@color/gray"
-                android:textColor="?attr/colorPrimary"
+                android:background="?attr/colorSecondaryVariant"
+                android:textColor="?attr/colorAccent"
                 android:textStyle="bold"
                 android:textSize="23sp"
                 android:paddingHorizontal="@dimen/app_padding"
