--- a/app/src/main/res/drawable/ripple_vocabulary_backgr.xml
+++ b/app/src/main/res/drawable/ripple_vocabulary_backgr.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="@color/lyric_gray_dark">
+    android:color="?attr/colorSecondaryVariant">
 
     <item android:id="@android:id/background">
 
         <shape android:shape="rectangle">
 
-            <solid android:color="@color/lyric_gray"/>
+            <solid android:color="?attr/colorControlHighlight"/>
 
             <corners android:radius="5dp"/>
 
