--- a/app/src/main/res/drawable/s_lyric_background.xml
+++ b/app/src/main/res/drawable/s_lyric_background.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <solid
-        android:color="@color/lyric_gray"/>
+        android:color="?attr/colorControlHighlight"/>
 
     <corners
         android:radius="8dp"/>
