--- a/app/src/main/res/drawable/s_time_backgr.xml
+++ b/app/src/main/res/drawable/s_time_backgr.xml
@@ -2,7 +2,7 @@
 <shape android:shape="rectangle"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <solid android:color="@color/gray"/>
+    <solid android:color="?attr/colorSecondaryVariant"/>
 
     <corners android:radius="5dp"/>
 </shape>
