--- a/app/src/main/res/layout-night/item_history.xml
+++ b/app/src/main/res/layout-night/item_history.xml
@@ -18,7 +18,7 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@{position%2 == 0 ? @color/background_gray : @color/gray}"
+        android:background="@{position%2 == 0 ? @color/background_gray_night : @color/gray_night}"
         android:onClick="@{()->interactor.onHistoryItemClick(historyItem)}">
 
         <LinearLayout
@@ -68,7 +68,7 @@
                 android:layout_marginStart="@dimen/app_padding"
                 android:maxLines="1"
                 android:ellipsize="end"
-                android:textColor="@color/paragraph_gray"/>
+                android:textColor="@color/paragraph_gray_night"/>
 
             <ImageView
                 android:layout_width="35dp"
