--- a/app/src/main/res/layout-night/item_language.xml
+++ b/app/src/main/res/layout-night/item_language.xml
@@ -21,7 +21,7 @@
         android:orientation="vertical"
         android:focusable="true"
         android:clickable="true"
-        android:background="@{position%2 == 0 ? @color/background_gray : @color/gray}"
+        android:background="@{position%2 == 0 ? @color/background_gray_night : @color/gray_night}"
         android:onClick="@{()->chooseLanguageInteractor.onLanguageClick(language.id)}">
 
         <LinearLayout
@@ -44,6 +44,7 @@
                 android:layout_weight="1"
                 android:textColor="?attr/colorPrimaryDark"
                 android:text="@{language.name}"
+                android:alpha="0.8"
                 android:paddingStart="25dp"
                 android:textSize="17sp"
                 android:gravity="center|start"
