--- a/app/src/main/res/layout/fragment_movie.xml
+++ b/app/src/main/res/layout/fragment_movie.xml
@@ -109,7 +109,7 @@
                         android:layout_height="wrap_content"
                         android:text="@string/play"
                         android:textStyle="bold"
-                        android:textColor="?attr/colorPrimary"/>
+                        android:textColor="?attr/colorAccent"/>
 
                 </LinearLayout>
 
