--- a/app/src/main/res/layout/item_configuration.xml
+++ b/app/src/main/res/layout/item_configuration.xml
@@ -31,7 +31,7 @@
                 android:textSize="15sp"
                 android:paddingStart="11dp"
                 android:paddingVertical="8dp"
-                android:textColor="@color/dark_blue" />
+                android:textColor="?attr/colorPrimaryVariant" />
 
             <ImageView
                 android:layout_width="wrap_content"
