--- a/app/src/main/res/layout/item_sort.xml
+++ b/app/src/main/res/layout/item_sort.xml
@@ -43,8 +43,8 @@
                     android:layout_height="wrap_content"
                     android:textStyle="bold"
                     android:textSize="15sp"
+                    android:textColor="?attr/colorPrimaryVariant"
                     android:paddingStart="@dimen/app_padding"
-                    android:textColor="@color/black"
                     android:alpha="0.9"
                     android:text="@{header}"
                     app:layout_constraintLeft_toRightOf="@id/dot"
@@ -58,7 +58,6 @@
                     android:layout_height="28dp"
                     android:layout_gravity="center"
                     android:alpha="0.9"
-                    app:tint="@color/black"
                     android:src="@drawable/ic_arrow_down"
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
