--- a/app/src/main/res/layout/item_translation.xml
+++ b/app/src/main/res/layout/item_translation.xml
@@ -28,7 +28,7 @@
             android:onClick="@{()->interactor.translationClicked(translation)}"
             android:paddingHorizontal="11dp"
             android:paddingVertical="8dp"
-            android:textColor="@color/dark_blue"
+            android:textColor="?attr/colorPrimaryVariant"
             android:background="@drawable/ripple_translation_item"/>
 
     </LinearLayout>
