--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,27 +1,29 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <style name="Theme.WordsLife" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/light_blue</item>
-        <item name="colorPrimaryVariant">@color/dark_blue</item>
+        <item name="colorPrimary">@color/light_blue_night</item>
+        <item name="colorPrimaryVariant">@color/lyric_gray</item>
         <item name="colorOnPrimary">@color/white</item>
-        <item name="colorPrimarySurface">@color/light_gray</item>
+        <item name="colorPrimarySurface">@color/light_gray_night</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/background_gray</item>
-        <item name="colorSecondaryVariant">@color/dark_blue</item>
+        <item name="colorSecondary">@color/background_gray_night</item>
+        <item name="colorSecondaryVariant">@color/gray_night</item>
         <item name="colorOnSecondary">@color/black</item>
-        <item name="colorAccent">@color/light_blue</item>
-        <item name="colorPrimaryDark">@color/header_gray</item>
-        <item name="colorOnSurface">@color/paragraph_gray</item>
+        <item name="colorAccent">@color/light_blue_night</item>
+        <item name="colorPrimaryDark">@color/header_gray_night</item>
+        <item name="colorOnSurface">@color/paragraph_gray_night</item>
+        <item name="colorControlHighlight">@color/lyric_gray_night</item>
 
-        <item name="android:statusBarColor" tools:targetApi="l">@color/light_gray</item>
-        <item name="android:windowLightStatusBar" tools:targetApi="m">true</item>
+        <item name="android:windowBackground">?attr/colorSecondary</item>
+        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorSecondaryVariant</item>
         <item name="fontFamily">@font/montserrat</item>
     </style>
 
-    <style name="Theme.NoWiredStrapInNavigationBar" parent="@style/Theme.Design.BottomSheetDialog">
+    <style name="Theme.NoWiredStrapInNavigationBar" parent="@style/Theme.Design.Light.BottomSheetDialog">
         <item name="android:windowIsFloating">false</item>
-        <item name="android:navigationBarColor">@color/gray</item>
+        <item name="android:navigationBarColor">?attr/colorSecondaryVariant</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
-        <item name="android:background">@drawable/s_rounded_dialog</item>
+        <item name="android:windowLightNavigationBar" tools:targetApi="o_mr1">true</item>
+        <item name="bottomSheetStyle">@style/AppModalStyle</item>
     </style>
 </resources>
