--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,24 +3,25 @@
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/light_blue</item>
         <item name="colorPrimaryVariant">@color/dark_blue</item>
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorOnPrimary">@color/black</item>
         <item name="colorPrimarySurface">@color/light_gray</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/background_gray</item>
-        <item name="colorSecondaryVariant">@color/dark_blue</item>
+        <item name="colorSecondaryVariant">@color/gray</item>
         <item name="colorOnSecondary">@color/black</item>
         <item name="colorAccent">@color/light_blue</item>
         <item name="colorPrimaryDark">@color/header_gray</item>
         <item name="colorOnSurface">@color/paragraph_gray</item>
+        <item name="colorControlHighlight">@color/lyric_gray</item>
 
-        <item name="android:statusBarColor" tools:targetApi="l">@color/light_gray</item>
+        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorSecondaryVariant</item>
         <item name="android:windowLightStatusBar" tools:targetApi="m">true</item>
         <item name="fontFamily">@font/montserrat</item>
     </style>
 
     <style name="Theme.NoWiredStrapInNavigationBar" parent="@style/Theme.Design.Light.BottomSheetDialog">
         <item name="android:windowIsFloating">false</item>
-        <item name="android:navigationBarColor">@color/gray</item>
+        <item name="android:navigationBarColor">?attr/colorSecondaryVariant</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
         <item name="android:windowLightNavigationBar" tools:targetApi="o_mr1">true</item>
         <item name="bottomSheetStyle">@style/AppModalStyle</item>
