Added text resources and changed design of clear filters button in FilterFragment

--- a/app/src/main/res/layout/fragment_filter.xml
+++ b/app/src/main/res/layout/fragment_filter.xml
@@ -54,7 +54,7 @@
                 android:id="@+id/clearFiltersBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAllCaps="true"
+                android:textAllCaps="false"
                 android:paddingHorizontal="@dimen/app_padding"
                 android:text="@string/clear"
                 android:textStyle="bold"
