--- a/app/src/main/res/drawable/s_clear_btn.xml
+++ b/app/src/main/res/drawable/s_clear_btn.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_enabled="true" android:color="@color/light_blue"/>
+    <item android:state_enabled="true" android:color="@android:color/white"/>
     <item android:color="@android:color/darker_gray"/>
 </selector>
